Call XFlush() for X11 software compositing.

With OOP-D and SoftwareOutputDeviceX11 being moved to the GPU process
sometimes tooltips aren't showing up immediately. Instead an empty
tooltip window appears until something else happens that causes GPU
process to flush it's output buffer. Add call to XFlush() to prevent
this.

Bug: 892110
Change-Id: I2aba6b9e41286ff6de9a68864d412b45cdcc7345
Reviewed-on: https://chromium-review.googlesource.com/c/1335999
Reviewed-by: kylechar <kylechar@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608554}
Former-commit-id: cb5adf205586281beb5b13bf8f48319687b2cf23